# YieldVault-RWA

./: .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENV_SETUP_README.md  PR_DESCRIPTION_ISSUE_763.md  README.md  TRIAGE_AND_REVIEW.md  package-lock.json  package.json  vitest.config.ts
backend/: .env.example  README.md  jest.config.js  openapi.json  package-lock.json  package.json
contracts/vault/fuzz/: Cargo.toml  README.md
contracts/vault/fuzz/corpus/share_price_math/: bootstrap_first_deposit  proportional_vault  round_trip_truncation  yield_accrual
contracts/vault/fuzz/fuzz_targets/: share_price_math.rs
contracts/vault/fuzz/seed_fixtures/: bootstrap_first_deposit.json  proportional_vault.json  round_trip_truncation.json  yield_accrual.json
docs/: CONTRACTS_ARCHITECTURE.md  CONTRIBUTOR_ONBOARDING_CHECKLIST.md  CROSS_REPO_INTEGRATION_TESTS.md  DATA_RETENTION_DELETION_POLICY.md  DEFINITION_OF_DONE.md  DEPENDENCY_REVIEW_PROCESS.md  DEPLOYMENT.md  GLOSSARY.md  ISSUE_TAXONOMY_AND_LABELS.md  MAINTAINER_ONBOARDING_RUNBOOK.md  MONITORING_OBSERVABILITY.md  QUALITY_GATES_MATRIX.md  RELEASE_TRAIN_CADENCE_AND_FREEZE_POLICY.md  RELEASE_VERIFICATION_CHECKLIST.md  THREAT_MODEL.md  TRIAGE_ROTATION_CALENDAR.md  WEBHOOK_INTEGRATION.md  WEBHOOK_PAYLOAD_EVOLUTION.md  incident_response_runbook.md  postmortem-playbook.md  release-notes-playbook.md  user-guide.md
frontend/: .env.example  bundle-stats.html  cypress.config.mjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: deploy_contracts.sh  fund-testnet-account.js  new-postmortem.sh  (+5 more)
(+1075 files in other folders)
